// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemStatus rendering render with Props 1`] = `
<Grid
  className="status"
  hasGutter={true}
>
  <GridItem
    className="item"
    span={6}
  >
    <p>
      Generating
    </p>
    <CheckIcon />
  </GridItem>
  <GridItem
    className="item"
    span={6}
  >
    <p>
      Uploading
    </p>
    <Spinner
      size="sm"
    />
  </GridItem>
</Grid>
`;

exports[`ListItemStatus rendering render without Props 1`] = `
<Grid
  className="status"
  hasGutter={true}
>
  <GridItem
    className="item"
    span={6}
  >
    <p>
      Generating
    </p>
    <span>
      --
    </span>
  </GridItem>
  <GridItem
    className="item"
    span={6}
  >
    <p>
      Uploading
    </p>
    <span>
      --
    </span>
  </GridItem>
</Grid>
`;
